# gnome-connection-manager

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Documentation-fr.md  Makefile  README.md  error  gnome-connection-manager.glade  gnome_connection_manager.py  key_picker_dialog.py  models.py  pyAES.py  pyproject.toml  spice-test.bash  ssh.expect  ssh_config_editor.py  ssh_config_parser.py  ssh_key_manager_dialog.py  ssh_migrate_gcm.py  urlregex.py  utils.py  widgets.py
fork/: ROADMAP-GCM-v1.3.md  claude (1).md  claude.md  claude_v2.md  claude_v3.md  gcm_import_libvirt.py  gcm_import_libvirt_v2.py  gcm_rdp.py  libvirt_inventory (1).py  libvirt_inventory.py  ssh_deploy.py
lang/: ar_AR.po  bn_BD.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_US.po  fa_IR.po  fi_FI.po  fr_FR.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  it_IT.po  ja_JP.po  ko_KO.po  ko_KR.po  messages.pot  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  uk_UA.po  vi_VN.po  zh_CN.po
lang/de/LC_MESSAGES/: gcm-lang.mo
lang/en/LC_MESSAGES/: gcm-lang.mo
lang/fr/LC_MESSAGES/: gcm-lang.mo
lang/it/LC_MESSAGES/: gcm-lang.mo
lang/ko/LC_MESSAGES/: gcm-lang.mo
lang/old/: cs_CZ.po  de_DE.po  fr_FR.po  ja_JP.po  ko_KO.po  pl_PL.po  pt_BR.po  sv_SE.po
lang/pl/LC_MESSAGES/: gcm-lang.mo
lang/pt/LC_MESSAGES/: gcm-lang.mo
lang/ru/LC_MESSAGES/: gcm-lang.mo
rdp/: docker-compose.yml
tests/: test_gcm.py
tools/: libvirt_inventory.py  ssh_deploy.py  validate_po.py  validate_xml_json.py
vnc/: Dockerfile  compose.yml  entrypoint.sh
